main/default/objects/Quote_Premium__c/Quote_Premium__c.object-meta.xml
<CustomObject>
    <label>Quote Premium</label>
    <nameField>
        <displayFormat>QP-{00000000}</displayFormat>
        <label>Quote Premium Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Premiums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>