main/default/objects/Quote_Premium__c/fields/Excess_Premium__c.field-meta.xml
<CustomField>
    <fullName>Excess_Premium__c</fullName>
    <label>Excess Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>