main/default/objects/Quote_Premium__c/fields/Overall_Rating_Factor__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_Factor__c</fullName>
    <label>Overall Rating Factor</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>