main/default/objects/Quote_Premium__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>